triggers/gogs-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gogs-webhook
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: gogs-event-listener
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-gogs-event-listener
    weight: 100
